2011-12-18  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bindings_helper): Fix format arguments.
	(eval_init): Registered new functions: symbol-function,
	func-get-form, func-get-env, functionp, interp-fun-p.

	* lib.c (nappend2, getplist_f, improper_plist_to_alist):
	tail variable renamed to avoid clash in macro.
	(func_get_form, func_get_env, interp_fun_p): New functions.

	* lib.h (func_get_form, func_get_env, interp_fun_p): Declared.
	(list_collect): Fix macro not to throw error, but handle the case.

	* match.c (vars_to_bindings, extract_bindings): tail variable
	renamed to avoid clash in macro.

	* txr.1: Documentation stubs.

2011-12-16  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (equal_hash): Eliminating displacement from character
	hashes. Simplifying some code.
	(eql_hash): Handle fixnums, characters and literals specially,
	rather than hashing all value types the same way. The shift
	applicable for object pointers causes adjacent integers to clash.

2011-12-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_vars): Bugfix: use expand_forms rather than
	expand on a list of forms.

2011-12-16  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: iskeyword updated.

2011-12-15  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (appendv): bugfix: wrong way test.
	(vector_list): Wrong zero used, resulting in vector(nil) being called.

2011-12-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): not added as synonym for null.

	* lib.c (copy_list): Use list_collect_append rather than
	list_collect_terminate.
	(append2, appendv): Simplified using new list_collect_append.
	(nappend2): Simplified using new list_collect_nconc.

	* lib.h (list_collect): Added check for accidental usage
	of list_collect after list_append, since PTAIL has different
	semantics.
	(list_collect_nconc, list_collect_append):  Semantics fixed so that
	append collecting works more like the Common Lisp append function,
	allowing trailing atoms or a lone atom. The meaning of PTAIL is