@@ -24,8 +24,8 @@
  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
  */
 
-extern val do_s;
-void match_init(void);
+extern val text_s, choose_s, gather_s, do_s;
+val format_field(val string_or_list, val modifier, val filter);
 val match_funcall(val name, val arg, val other_args);
 int extract(val spec, val filenames, val bindings);
-extern val text_s, choose_s, gather_s;
+void match_init(void);
